...
            android:orientation="vertical"
            android:padding="16dp"
            android:background="#F5F5F5">

            <!-- Add Event Button -->
            <Button
                android:id="@+id/addEventButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add Event"
                android:textColor="#FFFFFF"
                android:background="#BE531C"
                android:layout_marginBottom="16dp" />

            <!-- Recycler View for Events -->
            <androidx.recyclerview.widget.RecyclerView
...
